# jupyterhub-samlauthenticator

./: .gitignore  .install_deps  .travis.yml  ATTRIBUTION.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  mypy.ini  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
samlauthenticator/: __init__.py  samlauthenticator.py
tests/: __init__.py  test_authenticator.py  test_constants.py
