[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE.txt"]

[project]
name = "jupyterhub-samlauthenticator"
version = "0.0.10"
authors = [
  { name="Tom Kelley", email="distortedsignal@gmail.com" },
]
description = "SAML Authenticator for JupyterHub"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Hewlett-Packard/jupyterhub-samlauthenticator"
Issues = "https://github.com/Hewlett-Packard/jupyterhub-samlauthenticator/issues"